# rsso

./: Cargo.toml  LICENSE  README.md
src/: commands.rs  config.rs  fetch.rs  main.rs  state.rs
