[package]
name = "rsso"
version = "0.1.0"
edition = "2024"
authors = ["Jack Lo Russo <jack.lorusso@gmail.com>"]
license = "MIT"
description = "CLI tool for RSS feeds"
readme = "README.md"
homepage = "https://github.com/jacklorusso/rsso"
repository = "https://github.com/jacklorusso/rsso"
keywords = ["cli", "terminal", "rss"]
categories = ["command-line-utilities"]
[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
feed-rs = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
