[package]
name = "rsso"
version = "0.2.0"
edition = "2024"
authors = ["Jack Lo Russo <jack.lorusso@gmail.com>"]
license = "MIT"
description = "A minimal RSS feed organiser for the command line"
readme = "README.md"
homepage = "https://github.com/jacklorusso/rsso"
repository = "https://github.com/jacklorusso/rsso"
keywords = ["cli", "terminal", "rss"]
categories = ["command-line-utilities"]
[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
feed-rs = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
