[package]
name = "rsso"
version = "0.2.0"
edition = "2024"
authors = ["Jack Lo Russo <jack.lorusso@gmail.com>"]
license = "MIT"
description = "A minimal RSS feed organiser for the command line"
readme = "README.md"
homepage = "https://github.com/jacklorusso/rsso"
repository = "https://github.com/jacklorusso/rsso"
keywords = ["cli", "terminal", "rss"]
categories = ["command-line-utilities"]
[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "6"
feed-rs = "2"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
